# IRyS-BE-V2

./: .env-example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.development  README.md  README_OLD.md  alembic.ini  docker-compose-local.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd-dev.yml  cd-gcp.yml  cd-prod.yml  cd.yml  ci.yml
.github/workflows-example/: ci.yml
api/: __init__.py
api/auth/: auth.py
api/document/v1/: document.py
api/elastic/v1/: elastic.py
api/entity/v1/: entity.py
api/extraction/v1/: extraction.py
api/faq/v1/: faq.py
api/repository/v1/: document.py  monitoring.py  repository.py
api/search/v1/: search.py
api/user/v1/: user.py
app/: exception.py  server.py
app/auth/services/: token.py
app/classification/: __init__.py  classify.py  enum.py
app/classification/dump/: labelencoder_fitted.pkl  svm_trained_model.sav  tfidf_vect_fitted.pkl
app/classification/mlutil/: classifier_training.py
app/document/enums/: __init__.py  document.py
app/document/models/: document.py
app/document/schemas/: __init__.py  document.py  request.py  response.py
app/document/services/: __init__.py  document.py  documentindex.py
app/elastic/: __init__.py  client.py  configuration.py
app/elastic/helpers/: __init__.py  exception.py
app/elastic/schemas/: __init__.py  document.py  elastic.py  index.py
app/extraction/: __init__.py  base_extractor.py  configuration.py  converter.py  general_configuration.py  general_extractor.py  information_extractor.py  metadata_extractor.py  ner_result.py  nerresult.py
app/extraction/domain/: __init__.py  paper.py  recruitment.py
app/extraction/entities/: __init__.py  base.py  config.py  paper.py  recruitment.py
app/extraction/schemas/: __init__.py  entity.py  extraction.py  metadata.py
app/faq/models/: faq.py
app/faq/schemas/: request.py  response.py
app/preprocess/: __init__.py  ocr.py  preprocess.py
assets/templates/: forgot_password_otp_email.html  registration_otp_email.html  repository_collaborator_email.html
bertserving/: .env.example  Dockerfile  README.md  entrypoint.sh
celery_app/: .env.example  Dockerfile  Dockerfile.local  README.md  __init__.py  main.py  tasks.py
celery_app/beat/: start
celery_app/flower/: start
celery_app/worker/: init_ner_models.py  init_tika.py  start
core/: config.py
core/db/: session.py
core/exceptions/: __init__.py  base.py  document.py  repository.py  token.py  user.py
core/repository/: __init__.py  base.py  document.py  document_index.py  documentindex.py  faq.py  repository.py  respository.py  user.py
core/utils/: __init__.py  custom_exception_helper.py  gcs.py  hash_helper.py  mailer.py  password_helper.py  string_helper.py  token_helper.py
docker-example/: docker-compose-template.yml
docker-example/api/: Dockerfile
docker/api/: Dockerfile
gcp/: compute.tf  firewall.tf  provider.tf  subnetwork.tf
migrations/: env.py
migrations/versions/: 02393767a3e9_add_reference_document_to_repository.py  02c49a0e3266_add_column_refresh_token_and_valid_until.py  0a87bdcb16d7_add_size_to_document_table.py  1b884479238c_cek_migration.py  34c61696006e_added_document_table_v1.py  41eca3d0460e_sync_document_and_others.py  4f84fbf3af30_remove_file_content_str_from_document_.py  54f1cdd589ba_add_file_url_in_documents_table.py  5d4c42ea0097_create_repositories_table.py  5f1f5bc6b44e_create_user_repositories_table.py  68b84e326d41_add_otp_and_forgot_password_otp_columns.py  70363c29098f_fixed_indexing_status_enum.py  774ef911b3da_add_uploaded_by_in_documents.py  8210fd97a82e_create_users_table.py  849827b9132e_add_repository_id_in_documents_table.py  a5cfefb4e79c_change_elastic_doc_id_data_type.py  a7375ff9e955_add_current_task_id_column.py  b89cf41b64d7_add_temporary_long_text_str.py  d94665ef3b83_modify_document_table_column.py  dc553cd48a7d_add_documents_roles_and_permissions.py
(+62 files in other folders)
