[tool.poetry]
name = "irys"
version = "0.1.0"
description = "Intelligent Repository System"
authors = ["IRySTeam <padocon@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
PyJWT = "^2.4.0"
uvicorn = "^0.18.3"
fastapi = "^0.95"
celery = "^5.2.7"
gunicorn = "^20.1.0"
fastapi-event = "^0.1.3"
pythondi = "^1.2.4"
ujson = "^5.4.0"
aiomysql = "^0.1.1"
click = "^8.1.3"
greenlet = "1.1.3"
redis = "^4.3.4"
asyncpg = "^0.27.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
python-semantic-release = "^7.33.2"
fastapi-mail = "^1.2.6"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
